# awesomaze

./: Cargo.toml  Dockerfile  LICENSE-MIT  readme.md
awesomaze_maze/: Cargo.toml
awesomaze_maze/src/: awesomaze.rs  main.rs
awesomaze_maze/src/awesomaze/: agent_engine.rs  engine.rs  game_engine.rs  game_model.rs  info.rs  input.rs  model.rs  render_engine.rs  watch_engine.rs
awesomaze_maze/src/awesomaze/game_model/: recursive_backtracker.rs
awesomaze_maze/src/awesomaze/model/: awesom_model.rs  burn_model.rs
awesomlearn/: Cargo.toml
awesomlearn/src/: lib.rs  machine_learning.rs
awesomlearn/src/machine_learning/: dataloader.rs  nn.rs  reinforcement_learning.rs
awesomlearn/src/machine_learning/linear_classifier/: logistic_regression.rs
awesomlearn/src/machine_learning/nn/: activation.rs  awesom_rl_tensor.rs  backend.rs  backends.rs  dimensions.rs  model_config.rs  neuron.rs  nn_model.rs  nn_model_builder.rs  optimizer.rs  tensor.rs  tensor_autodiff.rs  tensor_error.rs  training_parameters.rs  weight_initialization.rs
awesomlearn/src/machine_learning/nn/backends/: backend_tests.rs  cpu_backend.rs  wgpu_backend.rs
awesomlearn/src/machine_learning/nn/backends/wgpu_backend/: add_broadcast_rm.wgsl  add_rm.wgsl  add_zero_padding.wgsl  add_zero_padding2.wgsl  arg_max_rm.wgsl  avg_pool2d_rm.wgsl  batch_reduce_sum_rm.wgsl  broadcast_equal.wgsl  compute.rs  (+52 more)
awesomlearn/src/machine_learning/reinforcement_learning/: environment.rs  replay_buffer.rs  rl_error.rs  rl_model.rs
awesomlearn/src/machine_learning/reinforcement_learning/q_learning/: dqnet.rs  mod.rs
