[package]
name = "awesomlearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "mnist"
path = "src/bin/mnist.rs"

[dependencies]
bytemuck = {version= "1.16.0", features = ["derive"]}
byteorder = "1.5.0"
float-cmp = "0.9.0"
futures = "0.3.30"
futures-intrusive = "0.5.0"
itertools = "0.13.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4"] }
wgpu = "22.0.0"
rayon = "1.10.0"
tracing = "0.1.41"
